--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Transcending the Psyche</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">33 minutes ago</div>
+                        <div class="date">49 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Who Has The Worst Smelling Feet?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>Sadhguru Rides to Philadelphia</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Transcending the Psyche</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">33 minutes ago</div>
+                            <div class="date">49 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7982,7 +7982,7 @@
                         <div class="video-info">
                             <h3>Sadhguru Rides to Philadelphia</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10250,7 +10250,7 @@
                         <div class="video-info">
                             <h3>Who Has The Worst Smelling Feet?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
