--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Parents Shouldn’t Live Through Their Children | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -708,7 +708,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN MAKE THE SOUND: BRAINROT EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1797,7 +1797,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US BUT DEAD PLAYERS STILL LOOK ALIVE</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>Parents Shouldn’t Live Through Their Children | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10360,7 +10360,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN MAKE THE SOUND: BRAINROT EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10745,7 +10745,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US BUT DEAD PLAYERS STILL LOOK ALIVE</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
