--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - A Lot for Which to Be Thankful</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">50 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>98 hours fermentation Pizza Dough. this is the result!!!!( Dead Pizza Dough)</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Home Baking a Large, Artisanal New York Style Pizza! (Recipe included)</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2600,7 +2600,7 @@
                     <div class="video-info">
                         <h3>AD Go on, have a wiff, I’m fresh all day thanks to @lorealparisuk Men Expert deodorants #skincare</h3>
                         <div class="channel">George Clarkey</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 17, 2025</div>
                     </div>
                 </a>
             </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - A Lot for Which to Be Thankful</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">50 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9391,7 +9391,7 @@
                         <div class="video-info">
                             <h3>98 hours fermentation Pizza Dough. this is the result!!!!( Dead Pizza Dough)</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9402,7 +9402,7 @@
                         <div class="video-info">
                             <h3>Home Baking a Large, Artisanal New York Style Pizza! (Recipe included)</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10866,7 +10866,7 @@
                         <div class="video-info">
                             <h3>AD Go on, have a wiff, I’m fresh all day thanks to @lorealparisuk Men Expert deodorants #skincare</h3>
                             <div class="channel">George Clarkey</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 17, 2025</div>
                         </div>
                     </a>
                 </div>
